examples/test/testpolicy13261.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13261
  namespace: namespace227
spec:
  podSelector:
    matchLabels:
      key7: value41
      key46: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value34
          key47: value44
          key37: value19
      podSelector:
        matchLabels:
          key18: value6
